Migration to Java 11